--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "drizzle-orm": "^0.44.6",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
+    "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
